--- a/src/MachineMonitor/App.config
+++ b/src/MachineMonitor/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Monbsoft.MachineMonitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Monbsoft.MachineMonitor.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -17,6 +18,14 @@
     </assemblyBinding>
   </runtime>
   <userSettings>
+    <Monbsoft.MachineMonitor.Properties.Settings>
+      <setting name="Network" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Transparent" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </Monbsoft.MachineMonitor.Properties.Settings>
     <Monbsoft.MachineMonitor.Settings>
       <setting name="Network" serializeAs="String">
         <value />
