--- a/src/MachineMonitor/App.config
+++ b/src/MachineMonitor/App.config
@@ -25,6 +25,9 @@
       <setting name="Transparent" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Disk" serializeAs="String">
+        <value>_Total</value>
+      </setting>
     </Monbsoft.MachineMonitor.Properties.Settings>
     <Monbsoft.MachineMonitor.Settings>
       <setting name="Network" serializeAs="String">
