--- a/src/MachineMonitor/MachineMonitor.csproj
+++ b/src/MachineMonitor/MachineMonitor.csproj
@@ -72,6 +72,7 @@
     </ApplicationDefinition>
     <Compile Include="Configuration\ConfigurationStore.cs" />
     <Compile Include="Messages\UpdatedConfigurationMessage.cs" />
+    <Compile Include="Services\DiskService.cs" />
     <Compile Include="Services\NetworkService.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
