--- a/src/MachineMonitor/MachineMonitor.csproj
+++ b/src/MachineMonitor/MachineMonitor.csproj
@@ -49,6 +49,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MvvmLightLibs.5.4.1.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -72,6 +74,11 @@
     </ApplicationDefinition>
     <Compile Include="Configuration\ConfigurationStore.cs" />
     <Compile Include="Messages\UpdatedConfigurationMessage.cs" />
+    <Compile Include="Properties\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
     <Compile Include="Services\DiskService.cs" />
     <Compile Include="Services\NetworkService.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -130,6 +137,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\machineicon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
