[#12] : premier plan ajouté

--- a/src/MachineMonitor/App.config
+++ b/src/MachineMonitor/App.config
@@ -28,6 +28,9 @@
       <setting name="Disk" serializeAs="String">
         <value>_Total</value>
       </setting>
+      <setting name="Topmost" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Monbsoft.MachineMonitor.Properties.Settings>
     <Monbsoft.MachineMonitor.Settings>
       <setting name="Network" serializeAs="String">
